--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "private": true,
   "repository": {
     "type": "git",
-    "url": "git@github.com:coreui/coreui-free-react-admin-template.git"
+    "url": "git+ssh://git@github.com/coreui/coreui-free-react-admin-template.git"
   },
   "dependencies": {
     "@coreui/coreui": "^2.1.12",
@@ -22,6 +22,10 @@
     "core-js": "^3.1.4",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
+    "eslint": "^6.3.0",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
     "flag-icon-css": "^3.3.0",
     "font-awesome": "^4.7.0",
     "node-sass": "^4.12.0",
@@ -29,7 +33,9 @@
     "react": "^16.9.0",
     "react-app-polyfill": "^1.0.1",
     "react-chartjs-2": "^2.7.6",
+    "react-datepicker": "^2.9.6",
     "react-dom": "^16.9.0",
+    "react-js-pagination": "^3.0.2",
     "react-router-config": "^5.0.1",
     "react-router-dom": "^5.0.1",
     "react-select": "^3.0.4",
@@ -38,6 +44,7 @@
     "simple-line-icons": "^2.4.1"
   },
   "devDependencies": {
+    "eslint-plugin-react": "^7.14.3",
     "react-scripts": "^3.0.1"
   },
   "scripts": {
@@ -46,7 +53,9 @@
     "test": "react-scripts test",
     "test:cov": "npm test -- --coverage --watchAll=false",
     "test:debug": "react-scripts --inspect-brk test --runInBand",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint src/**",
+    "lint-fixup": "eslint src --ext .js,.jsx --fix"
   },
   "bugs": {
     "url": "https://github.com/coreui/coreui-free-react-admin-template/issues"
@@ -71,5 +80,7 @@
   "engines": {
     "node": ">=8.10",
     "npm": ">=6"
-  }
+  },
+  "main": ".eslintrc.js",
+  "keywords": []
 }
