--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-router-dom": "^5.0.1",
     "react-select": "^3.0.4",
     "react-test-renderer": "^16.8.6",
+    "react-validation": "^3.0.7",
     "reactstrap": "^8.0.1",
     "simple-line-icons": "^2.4.1"
   },
