--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
+
+NODE_ENV=local
+REACT_EDITOR=atom
 PORT=3000
 CHOKIDAR_USEPOLLING=true
-REACT_APP_BACKEND_HOST='http://10.22.7.105:8090'
+REACT_APP_BACKEND_HOST='http://10.22.7.105:8090
